data/derived/fa15/progs/unify/prog1281.ml.out
Characters 93-105:
  | Sine e -> Printf.printf "sin(pi*%s)" exprToString e
                            ^^^^^^^^^^^^
Error: This expression has type
         ('a -> 'b, out_channel, unit, unit, unit, 'a -> 'b)
         CamlinternalFormatBasics.fmt
       but an expression was expected of type
         ('a -> 'b, out_channel, unit, unit, unit, unit)
         CamlinternalFormatBasics.fmt
       Type 'a -> 'b is not compatible with type unit 
